--- a/index.HTML
+++ b/index.HTML
@@ -4,8 +4,11 @@
 		<title>The Golden Retriver</title>
 	</head>
 	<body>
-		<h1 align="center">The Golden Retriver</h1><hr>
-		<p>The <strong>Golden Retriever</strong> is a medium-large <a href=https://en.wikipedia.org/wiki/Gun_dog">gun dog</a> that was bred to retrieve shot waterfowl, such as ducks and upland game birds, during hunting and shooting parties. 
+		<header>
+			<h1 align="center"><img srcset="images/Golden_Retriever_Carlos.jpg 5000w" alt=""></h1>
+			<h1 align="center"><font size="+2">The Golden Retriver</font></h1><hr>
+		</header>
+		<p><font size="+2">The <strong>Golden Retriever</strong> is a medium-large <a href=https://en.wikipedia.org/wiki/Gun_dog">gun dog</a> that was bred to retrieve shot waterfowl, such as ducks and upland game birds, during hunting and shooting parties. 
 		The name <em>"retriever"</em> refers to the breed's ability to retrieve shot game undamaged due to their soft mouth. Golden retrievers have an instinctive love of water, and 
 		are easy to train to basic or advanced obedience standards. They are a long-coated breed, with a dense inner coat that provides them with adequate warmth in the outdoors,
 		and an outer coat that lies flat against their bodies and repels water. Golden retrievers are well suited to residency in suburban or country environments.
@@ -17,5 +20,21 @@
 		friendly, gentle temperament means it is unsuited to being a professional guard dog, but its temperament has also made it the third-most popular family dog breed 
 		(by registration) in the United States, the fifth-most popular in Brazil and Australia, and the eighth-most popular in the United Kingdom. Golden Retrievers are rarely 
 		choosy eaters, but require ample (two or more hours a day) exercise. The breed is fond of play but also highly trainable.</p>
+		</font>
+		<nav>
+			<h2 align="center">Want to know more about golden retriver?
+			<ul>
+				<li><a href="index.html">Intoduction of Golden retriver</a></li>
+				<li><a href="characteristic.html">Characteristics of Golden retriver</a></li>
+				<li><a href="physiology.html">Physiology of Golden Retriver</a></li>
+				<li><a href="image.html">View photos of Golden Retriver</a></li>
+				<li><a href="video.html">Watch videos of Golden Retriver</a></li>
+			</ul></h2>
+		</nav><hr>
+		<font size="+2">
+		<footer>
+			The content of this page is updated on <time>18 March 2020</time>
+		</footer>
+		</font>
 	</body>
 </html>
