--- a/image.html
+++ b/image.html
@@ -18,23 +18,23 @@
 		</header>
 		<table>
 			<tr>
-				<td><img srcset=Golden_Retriever_Carlos_im_herbstlichen_Heessener_Wald.jpg 2000w" alt=""></td>
-				<td><img srcset=images/Golden_Retriever_standing_Tucker.jpg 2000w" alt=""></td>
-				<td><img srcset=images/GoldenRetrieverSnow.jpg 2000w" alt=""></td>
+				<td><img srcset="Golden_Retriever_Carlos_im_herbstlichen_Heessener_Wald.jpg 2000w" alt=""></td>
+				<td><img srcset="Golden_Retriever_standing_Tucker.jpg 2000w" alt=""></td>
+				<td><img srcset="GoldenRetrieverSnow.jpg 2000w" alt=""></td>
 			</tr>
 			<tr>
-				<td><img srcset=images/GoldenRetriver_agility_tunnel_wb.jpg 2000w" alt=""></td>
-				<td><img srcset=images/WizzdomOfSoulcharisma.jpg 2000w" alt=""></td>
-				<td><img srcset=images/Golde33443.jpg 2000w" alt=""></td>
+				<td><img srcset="GoldenRetriver_agility_tunnel_wb.jpg 2000w" alt=""></td>
+				<td><img srcset="WizzdomOfSoulcharisma.jpg 2000w" alt=""></td>
+				<td><img srcset="Golde33443.jpg 2000w" alt=""></td>
 			</tr>
 			<tr>
-				<td><img srcset=images/photo-1551432429-7462fba74aa5.jpg 2000w" alt=""></td>
-				<td><img srcset=images/photo-1518980965145-061901e21c7d.jpg 2000w" alt=""></td>
-				<td><img srcset=images/photo-1565372254078-bf0b3665a34a.jpg 2000w" alt=""></td>
+				<td><img srcset="photo-1551432429-7462fba74aa5.jpg 2000w" alt=""></td>
+				<td><img srcset="photo-1518980965145-061901e21c7d.jpg 2000w" alt=""></td>
+				<td><img srcset="photo-1565372254078-bf0b3665a34a.jpg 2000w" alt=""></td>
 			</tr>
 			<tr>
-				<td><img srcset=images/photo-1518980965145-061901e21c7d.jpg 2000w" alt=""></td>
-				<td><img srcset=images/WizzdomOfSoulcharisma.jpg 2000w" alt=""></td>
+				<td><img srcset="photo-1518980965145-061901e21c7d.jpg 2000w" alt=""></td>
+				<td><img srcset="WizzdomOfSoulcharisma.jpg 2000w" alt=""></td>
 			</tr>
 		</table><hr>
 		<footer>
