--- a/video.html
+++ b/video.html
@@ -19,19 +19,19 @@
 		<table>
 			<tr>
 				<td><video width="500" height="500" controls>
-					<source src="videos/109-921-046.mp4"></video></td>
+					<source src="109-921-046.mp4"></video></td>
 				<td><video width="500" height="500" controls>
-					<source src="videos/140-315-243.mp4"></video></td>
+					<source src="140-315-243.mp4"></video></td>
 				<td><video width="500" height="500" controls>
-					<source src="videos/208-494-398.mp4"></video></td>
+					<source src="208-494-398.mp4"></video></td>
 			</tr>
 			<tr>
 				<td><video width="500" height="500" controls>
-					<source src="videos/505-423-221.mp4"></video></td>
+					<source src="505-423-221.mp4"></video></td>
 				<td><video width="500" height="500" controls>
-					<source src="videos/613-042-699.mp4"></video></td>
+					<source src="613-042-699.mp4"></video></td>
 				<td><video width="500" height="500" controls>
-					<source src="videos/824-473-316.mp4"></video></td>
+					<source src="824-473-316.mp4"></video></td>
 			</tr>
 		</table><hr>
 		<footer>
