--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<h1 align="center"><img srcset="images/Golden_Retriever_Carlos.jpg 5000w" alt=""></h1>
 			<h1 align="center"><font size="+2">The Golden Retriver</font></h1><hr>
 		</header>
-		<p><font size="+2">The <strong>Golden Retriever</strong> is a medium-large <a href=https://en.wikipedia.org/wiki/Gun_dog">gun dog</a> that was bred to retrieve shot waterfowl, such as ducks and upland game birds, during hunting and shooting parties. 
+		<p><font size="+2">The <strong>Golden Retriever</strong> is a medium-large <a href="https://en.wikipedia.org/wiki/Gun_dog">gun dog</a> that was bred to retrieve shot waterfowl, such as ducks and upland game birds, during hunting and shooting parties. 
 		The name <em>"retriever"</em> refers to the breed's ability to retrieve shot game undamaged due to their soft mouth. Golden retrievers have an instinctive love of water, and 
 		are easy to train to basic or advanced obedience standards. They are a long-coated breed, with a dense inner coat that provides them with adequate warmth in the outdoors,
 		and an outer coat that lies flat against their bodies and repels water. Golden retrievers are well suited to residency in suburban or country environments.
