--- a/physiology.html
+++ b/physiology.html
@@ -29,8 +29,8 @@
 			feathering on the fronts of their necks, backs of their thighs and the bottoms of 
 			their tails.
 			<figure id="Golden Retriever skeleton">
-				<caption>Golden Retriever skeleton</caption>
-				<img srcset="images/Golden_Retrievers_dark_and_light.jpg  1750w" alt="">
+				<img srcset="Golden_Retrievers_dark_and_light.jpg  1750w" alt="">
+				<figcaption>Golden Retriever litters typically contain five to ten puppies</figcaption>
 			</figure>
 			<p>The American Kennel Club (AKC) standard states the coat is a "rich, lustrous 
 			golden of various shades", disallowing extremely light or extremely dark coats. 
