--- a/physiology.html
+++ b/physiology.html
@@ -30,7 +30,7 @@
 			their tails.
 			<figure id="Golden Retriever skeleton">
 				<img srcset="Golden_Retrievers_dark_and_light.jpg  1750w" alt="">
-				<figcaption>Golden Retriever litters typically contain five to ten puppies</figcaption>
+				<figcaption>Golden Retrievers vary in colour</figcaption>
 			</figure>
 			<p>The American Kennel Club (AKC) standard states the coat is a "rich, lustrous 
 			golden of various shades", disallowing extremely light or extremely dark coats. 
